--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 	"author": "潘丽敏",
 	"license": "MIT",
 	"dependencies": {
-		"@icanvas/core": "^3.0.0"
+		"@icanvas/core": "^3.0.0",
+		"qs": "^6.9.1"
 	},
 	"main": "dist/icanvas.umd.js",
 	"module": "dist/icanvas.es.js",
